# secure-squads

./: Cargo.toml  README.md  idl.json
src/: main.rs  utils.rs
src/command/: display_transaction.rs  display_vault.rs  initiate_program_upgrade.rs  initiate_transfer.rs  mod.rs  multisig_create.rs  proposal_vote.rs  vault_transaction_accounts_close.rs  vault_transaction_execute.rs
src/squads_decoder/: discriminator.rs  instruction_mapper.rs  mod.rs
