[package]
name = "secure-squads"
readme = "README.md"
description = "A cli for safe interactions with squads-v4"
homepage="https://github.com/mubarizkyc/secure-squads"
repository ="https://github.com/mubarizkyc/secure-squads"
license-file = "LICENSE"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.4.13", features = ["derive"] }
eyre = "0.6.11"
dialoguer = "0.11.0"
indicatif = "0.17.7"
colored = "2.1.0"
# Solana deps
solana-sdk = "1.18.3"
# local deps
squads-multisig  = "2.0.1"
solana-remote-wallet = "1.18.3"
solana-clap-v3-utils = "1.18.3"
solana-program = "1.18.3"
clap_v3 = { package = "clap", version = "3.0", optional = false }  # The version needed for solana_clap_utils
solana-address-lookup-table-program = "1.18.3"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
bs64 = "0.1.2"
solana-transaction-status = "1.18.26"
sha2 = "0.10.8"
chainparser = "0.3.0"
solana_idl = "0.2.0"
lazy_static = "1.5.0"
log = "0.4.27"
heck = "0.5.0"
borsh = "1.5.7"
anchor-lang = "0.31.1"
serde_json = "1.0.140"
bincode = "2.0.1"

[[bin]]
name = "secure-squads"
path = "src/main.rs"